Fix code filter contents being cut off a bit

--- a/src/fe/features/pages/codeholders/style.less
+++ b/src/fe/features/pages/codeholders/style.less
@@ -329,6 +329,7 @@
             .picked-codes {
                 display: inline-block;
                 width: calc(100% - 24px);
+                height: 1.5em;
                 overflow: hidden;
                 white-space: nowrap;
                 vertical-align: middle;
